# dummy-cleansweep

./: Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  check_gcs_file.py  conftest.py  pyproject.toml  pytest.ini  sampl.py  setup.py
app/chunk/: __main__.py  main.py
app/clean/: __main__.py  clean_expectations.yml  main.py
app/concatenate/: __main__.py  main.py
app/create_dag/: __main__.py  main.py  overrides.py  pipeline.py  settings.py  tags.py
app/create_dag/templates/: dag.jinja2  short_curcuit.jinja2  task.jinja2
app/drop/: __main__.py  main.py
app/embed/: __main__.py  main.py
app/merge/: __main__.py  main.py
app/metadata/: __main__.py  main.py
app/run/: __main__.py  main.py
app/semantic/chunk/: __main__.py  main.py
app/semantic/cluster/: __main__.py  main.py
app/semantic/merge/: __main__.py  main.py
app/transform/: __main__.py  main.py
app/translate/: __main__.py  main.py
cleansweep/: __init__.py  _types.py  enumerations.py  exceptions.py  flags.py
cleansweep/chunk/: __init__.py  chunk.py  html.py  jill.py  strategies.py  strategies.yml  utils.py
cleansweep/clean/: __init__.py  clean.py  filter.py  rules.py  substrings.py
cleansweep/config/: __init__.py  load.py
cleansweep/core/: __init__.py  delta.py  fileio.py
cleansweep/deployments/: __init__.py  deployments.py  deployments.yml
cleansweep/dq/: __init__.py  data_quality.py  dq_expectations.py
cleansweep/embed/: __init__.py  embedder.py  embedding.py  model.py  utils.py
cleansweep/hooks/: __init__.py  hookimpl.py  hookspecs.py
cleansweep/iso/: __init__.py  languages.py  regions.py
cleansweep/metadata/: __init__.py  generate.py
cleansweep/model/: __init__.py  core.py  network.py  question.py  transform.py
cleansweep/plugins/: __init__.py
cleansweep/prompts/: __init__.py  prompts.py  prompts.yml  utils.py
cleansweep/settings/: __init__.py  _helpers.py  _types.py  _validators.py  app.py  base.py  chunk.py  clean.py  concatenate.py  drop.py  embedding.py  files.py  load.py  merge.py  metadata.py  run.py  transform.py  translation.py
cleansweep/translate/: __init__.py  translation.py
cleansweep/utils/: __init__.py  bucket.py  collections.py  dataframe.py  exceptions.py  io.py  logging.py  pydantic.py  regex.py  tar.py  threading.py
config/: cloud_run.yml
extensions/cleansweep-core/: Cargo.toml  Makefile  no_array.json  no_array_mapping.json  pyproject.toml  requirements.dev.txt
extensions/cleansweep-core/python/cleansweep_core/: __init__.py  _cleansweep_core.pyi
extensions/cleansweep-core/python/cleansweep_core/chunk/: __init__.py
extensions/cleansweep-core/python/cleansweep_core/chunk/semantic/: __init__.py
extensions/cleansweep-core/python/cleansweep_core/chunk/semantic/merge/: __init__.py
extensions/cleansweep-core/python/cleansweep_core/model/transform/: __init__.py
extensions/cleansweep-core/scripts/: add_dep.sh  install.sh  pip_install_helpers.sh  update.sh
extensions/cleansweep-core/src/: lib.rs
extensions/cleansweep-core/src/common/: utils.rs
extensions/cleansweep-core/src/tokenize/: mod.rs  tokenizer.rs
extensions/cleansweep-core/src/transform/: mod.rs  model.rs  transformer.rs
scripts/: cloud_build_runner.sh  cloud_run.sh  copy_cloud_run_env.sh  gcs.sh  gh.sh  log.sh  read_yaml.py  test_runner.sh  trigger_job.sh
smoke_tests/config/: merge_and_concat.yml  simple.yml
smoke_tests/data/: simple.ndjson
smoke_tests/tests/: merge_and_concat.json  simple.json  template.schema.json
tests/: test_deployments.py  test_exceptions.py  test_flags.py
tests/chunk/: test_chunk.py  test_enumerations.py  test_parameters.json
tests/clean/: test_clean.py  test_filter.py  test_rules.py  test_substrings.py
tests/core/: test_core_functionality.py  test_delta.py  test_fileio.py
tests/dq/: test_data_quality.py  test_dq_expectations.py
tests/embed/: test_embed.py  test_embedder.py  test_embedding.py
tests/hooks/: plugin.py  test_hooks.py
tests/iso/: test_languages.py  test_regions.py
tests/metadata/: test_generate.py
tests/model/: test_core_model.py  test_network.py  test_transform.py
tests/translate/: test_translation.py
tests/utils/: test_io.py  test_regex.py  test_utils.py
(+39 files in other folders)
