[package]
name = "cleansweep-core"
version = "0.2.13"
edition = "2021"

[dependencies]
log = "0.4"
md-5 = "0.10"
pyo3 = { version = "0.24", features = ["extension-module"] }
pyo3-log = "0.12"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # if you need JSON support

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[lib]
crate-type = ["cdylib"]
name = "_cleansweep_core"

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]
